# neural_stpp

./: pyproject.toml  setup.py
neural_stpp/: toy_datasets.py
neural_stpp/models/: spatiotemporal.py
neural_stpp/models/spatial/: cnf.py  jumpcnf.py
neural_stpp/models/temporal/: neural.py
