[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=0.29.28", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-stpp"
version = "0.1.0"

# optional, but recommended so dependencies are tracked here:
dependencies = [
  "numpy>=1.18",
  "torch>=1.9",
  "torchdiffeq"
]

[tool.setuptools]
package-dir = { "" = "neural_stpp" }

[tool.setuptools.packages.find]
where   = ["neural_stpp"]
include = ["neural_stpp", "neural_stpp.*"]
